# evals-cicd

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: evaluate.yml
app/: __init__.py  graph.py  tools.py
notebooks/: trigger_eval.ipynb
scripts/: report_eval.py
tests/: test_eval.py
